--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,9 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Space Grotesk", sans-serif;
+  background-color: rgb(15, 22, 36);
+  color: rgb(242, 245, 247);
 }
 
 a {
@@ -14,3 +15,23 @@ a {
 * {
   box-sizing: border-box;
 }
+.flex {
+  display: flex;
+}
+
+.justify-space-evenly {
+  justify-content: space-evenly;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+h2 {
+  font-weight: 800;
+  font-size: 65px;
+  line-height: 72px;
+  padding-top: 52px;
+  padding-bottom: 36px;
+  margin: 0;
+}
+ 
